[workspace]
members = [
    "crates/syntax/*",
    "crates/infer/*",
    "crates/semantics/*",
    "crates/compile/*",
    "crates/eval/*",
    "crates/vm/*",
    "crates/trace/*",
    "crates/apps/*",
    "crates/static/husky-root-static-defn",
    "crates/static/static-defn",
    "crates/static/domains/ml/*",
    "crates/static/__husky",
    "crates/static/static-defn",
    "crates/try",
]

[profile.dev]
opt-level = 0
panic = "unwind"

[profile.release]
opt-level = 3
lto = true
