[package]
name = "arena"
version = "0.3.0"
description = "Simple index-based arena without deletion."
license = "MIT OR Apache-2.0"
repository = "https://github.com/xiyuzhai/husky"
documentation = "https://docs.rs/arena"
categories = ["data-structures", "memory-management"]
edition = "2021"
rust-version = "1.56"
