[package]
name = "common"
version = "0.0.0"
description = "Common stuffs for the Husky Programming Language"
license = "MIT OR Apache-2.0"
edition = "2021"

[lib]
doctest = false

[dependencies]
text-size = "1.0.0"
bimap = "0.6.1"
rowan = "0.14.0"
parking_lot = "0.11.0"

paths = { path = "../paths", version = "0.0.0" }