[package]
name = "file_db"
version = "0.0.0"
description = "TBD"
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.56"

[lib]
doctest = false

[dependencies]
rustc-hash = "1.1.0"

salsa = { path = "../salsa", version = "0.0.0" }
common = { path = "../common", version = "0.0.0" }
syntax = { path = "../syntax", version = "0.0.0" }
stdx = { path = "../stdx", version = "0.0.0" }
profile = { path = "../profile", version = "0.0.0" }
test_utils = { path = "../test_utils", version = "0.0.0" }
vfs = { path = "../vfs", version = "0.0.0" }
