[package]
name = "husky-lang-server"
version = "0.0.0"
edition = "2021"

[[bin]]
name = "husky-lang-server"
path = "src/bin/main.rs"

[dependencies]
crossbeam-channel = "0.5.0"
lsp-types = { version = "0.91", features = ["proposed"] }
xflags = "0.2.1"
lsp-server = "0.5.1"
serde = { version = "1.0.106", features = ["derive"] }
serde_json = { version = "1.0.48", features = ["preserve_order"] }
threadpool = "1.7.1"
parking_lot = "0.11.0"
rustc-hash = "1.1.0"

flycheck = { path = "../flycheck", version = "0.0.0" }
vfs = { path = "../vfs", version = "0.0.0" }
ide = { path = "../ide", version = "0.0.0" }