[package]
name = "husky_lang_server"
version = "0.0.0"
edition = "2021"

[[bin]]
name = "husky_lang_server"
path = "src/bin/main.rs"

[dependencies]
crossbeam-channel = "0.5.0"
lsp-types = { version = "0.91", features = ["proposed"] }
xflags = "0.2.1"
lsp-server = "0.5.1"
serde = { version = "1.0.106", features = ["derive"] }
serde_json = { version = "1.0.48", features = ["preserve_order"] }
threadpool = "1.7.1"
parking_lot = "0.11.0"
rustc-hash = "1.1.0"
tracing = "0.1"

flycheck = { path = "../flycheck", version = "0.0.0" }
vfs = { path = "../vfs", version = "0.0.0" }
vfs-notify = { path = "../vfs_notify", version = "0.0.0" }
project_model = { path = "../project_model", version = "0.0.0" }

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 0
