[package]
name = "husky_lang_server"
version = "0.0.0"
edition = "2021"

[[bin]]
name = "husky_lang_server"
path = "src/bin/main.rs"

[dependencies]
anyhow = "1.0.26"
dissimilar = "1.0.2"
crossbeam-channel = "0.5.0"
lsp-types = { version = "0.91", features = ["proposed"] }
xflags = "0.2.1"
lsp-server = "0.5.1"
serde = { version = "1.0.106", features = ["derive"] }
serde_json = { version = "1.0.48", features = ["preserve_order"] }
threadpool = "1.7.1"
parking_lot = "0.11.0"
rustc-hash = "1.1.0"
tracing = "0.1"
itertools = "0.10.0"

common = { path = "../common", version = "0.0.0" }
stdx = { path = "../stdx", version = "0.0.0" }
flycheck = { path = "../flycheck", version = "0.0.0" }
vfs = { path = "../vfs", version = "0.0.0" }
vfs-notify = { path = "../vfs_notify", version = "0.0.0" }
project = { path = "../project", version = "0.0.0" }
base_db = { path = "../base_db", version = "0.0.0"}
profile = { path = "../profile", version = "0.0.0"}
syntax = { path = "../syntax", version = "0.0.0"}
ide = { path = "../ide", version = "0.0.0"}
ide_db = { path = "../ide_db", version = "0.0.0"}
hir = { path = "../hir", version = "0.0.0"}
