[package]
name = "paths"
version = "0.0.0"
description = "TBD"
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.56"

[lib]
doctest = false

[dependencies]
# they (husky-lang-server team) say:
# Adding this dep sadly puts a lot of husky-lang-server crates after the
# serde-derive crate. Even though we don't activate the derive feature here,
# someone else in the crate graph certainly does!
# serde = "1"
