[package]
name = "project"
version = "0.0.0"
description = "TBD"
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.56"

[lib]
doctest = false

[dependencies]
rustc-hash = "1.1.0"

common = { path = "../common", version = "0.0.0" }
paths = { path = "../paths", version = "0.0.0" }
vfs = { path = "../vfs", version = "0.0.0" }