[package]
name = "salsa"
version = "0.0.0" # CHECK salsa-macros version
authors = ["Xiyu Zhai"]
edition = "2021"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/salsa-rs/salsa"
description = "Adapted version of the salsa crate"

[dependencies]
crossbeam-utils = { version = "0.8", default-features = false }
indexmap = "1.0.1"
lock_api = "0.4"
log = "0.4.5"
parking_lot = "0.11.0"
rustc-hash = "1.0"
smallvec = "1.0.0"
oorandom = "11"

salsa-macros = { version = "0.0.0", path = "../salsa-macros" }

[dev-dependencies]
diff = "0.1.0"
env_logger = "0.7"
linked-hash-map = "0.5.2"
rand = "0.7"
rand_distr = "0.2.1"
 