[package]
name = "husky-debugger-gui-yew"
version = "0.0.0"
edition = "2021"

[dependencies]
wasm-bindgen = "0.2.45"
wasm-logger = "0.2"
# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. However, it is slower than the default
# allocator, so it's not enabled by default.
wee_alloc = { version = "0.4.2", optional = true }
log = "0.4.6"
yew = "0.19.3"
yew-agent = "0.1.0"
yew-router = "0.16"
reqwasm = "0.5.0"
web-sys = "0.3.55"
futures = "0.3.17"
wasm-bindgen-futures = "0.4.28"
serde_json = "1.0.73"
serde = { version = "1.0", features = ["derive"] }
husky-debugger-protocol = { path = "../husky-debugger-protocol", version = "0.0.0" }
