[package]
name = "husky-debugger-gui-sycamore"
version = "0.0.0"
edition = "2021"

[dependencies]
wasm-logger = "0.2"
serde_json = "1.0.73"
serde = { version = "1.0", features = ["derive"] }
log = "0.4.6"
reqwasm = "0.5.0"
futures = "0.3.17"
wasm-bindgen-futures = "0.4.28"
console_error_panic_hook = "0.1.7"
sycamore = { path = "../sycamore/packages/sycamore", version = "0.8.0-beta.6" }
husky-tracer-protocol = { path = "../husky-tracer-protocol", version = "0.0.0" }
