[package]
name = "husky-debugger-gui-sycamore"
version = "0.0.0"
edition = "2021"

[dependencies]
wasm-logger = "0.2"
serde_json = "1.0.73"
serde = { version = "1.0", features = ["derive"] }
log = "0.4.6"
reqwasm = "0.5.0"
futures = "0.3.17"
wasm-bindgen-futures = "0.4.28"
console_error_panic_hook = "0.1.7"
wasm-bindgen = "0.2.80"
libmath = "0.2.1"
js-sys = "0.3.58"
sycamore = { path = "../../forks/sycamore/packages/sycamore", version = "0.8.0-beta.6" }
vec-like = { path = "../../core/crates/abstraction/vec-like", version = "0.0.0" }
husky-trace-protocol = { path = "../../core/crates/trace/husky-trace-protocol", version = "0.0.0" }

[dependencies.web-sys]
version = "0.3.57"
features = [
    'CanvasRenderingContext2d',
    'CssStyleDeclaration',
    'Document',
    'Element',
    'EventTarget',
    'HtmlCanvasElement',
    'HtmlElement',
    'MouseEvent',
    'Node',
    'Window',
    'KeyboardEvent',
    'ImageData',
    'HtmlDialogElement',
    'HtmlInputElement',
    'HtmlFormElement'
]

[profile.dev]
opt-level = 1
