[package]
name = "husky-developer-gui-sycamore"
version = "0.0.0"
edition = "2021"

[dependencies]
wasm-logger = "0.2"
serde_json = "1.0.73"
serde = { version = "1.0", features = ["derive"] }
log = "0.4.6"
reqwasm = "0.5.0"
futures = "0.3.17"
wasm-bindgen-futures = "0.4.28"
console_error_panic_hook = "0.1.7"
wasm-bindgen = "0.2.86"
libmath = "0.2.1"
js-sys = "0.3.58"
sycamore = { path = "../../forks/sycamore/packages/sycamore" }
vec-like = { path = "../../crates/abstraction/vec-like" }
trackable = { path = "../../crates/abstraction/trackable" }
husky-trace-protocol = { path = "../../crates/debugtime/husky-trace-protocol" }
husky-vm-primitive-value = { path = "../../crates/vm/husky-vm-primitive-value" }

[dependencies.web-sys]
version = "0.3.57"
features = [
    'CanvasRenderingContext2d',
    'CssStyleDeclaration',
    'Document',
    'Element',
    'EventTarget',
    'HtmlCanvasElement',
    'HtmlElement',
    'MouseEvent',
    'Node',
    'Window',
    'KeyboardEvent',
    'ImageData',
    'HtmlDialogElement',
    'HtmlInputElement',
    'HtmlFormElement'
]

[workspace]

[profile.dev]
opt-level = 3

[features]
