[package]
name = "husky-vm-interface"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
cyclic-slice = { path = "../../common-rs/abstraction/cyclic-slice" }
serde = { version = "1.0.106", features = ["derive"], optional = true }
husky-vm-binding = { path = "../../core/crates/vm/husky-vm-binding", optional = true }

[features]
serde_support = ["dep:serde"]
binding = ["dep:husky-vm-binding"]
extra = ["binding"]
check = []
