[package]
name = "husky-eval"
version = "0.0.0"
description = "TBD"
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.56"

[lib]

[dependencies]
serde.workspace = true
serde_json.workspace = true
lsp-types.workspace = true
indexmap = "2.0.0"
# abstractions
salsa = { path = "../../abstractions/salsa" }
cyclic-slice = { path = "../../abstractions/cyclic-slice" }
husky-check-utils = { path = "../../utils/husky-check-utils" }
husky-dev-utils = { path = "../../utils/husky-dev-utils" }
husky-print-utils = { path = "../../utils/husky-print-utils" }
idx-arena = { path = "../../abstractions/idx-arena" }
husky-text-protocol = { path = "../../protocols/husky-text-protocol" }
husky-coword = { path = "../../kernel/husky-coword" }
husky-ethereal-term = { path = "../../kernel/husky-ethereal-term" }
husky-ethereal-signature = { path = "../../kernel/husky-ethereal-signature" }
husky-ast = { path = "../../syntax/husky-ast" }
husky-vm = { path = "../../vm/husky-vm" }
husky-val-repr = { path = "../../val/husky-val-repr" }
husky-xml-syntax = { path = "../../syntax/husky-xml-syntax" }
wild-utils = { path = "../../utils/husky-wild-utils" }
husky-vm-register-method = { path = "../../vm/husky-vm-register-method" }
husky-entity-kind = { path = "../../kernel/husky-entity-kind" }
husky-data-viewer = { path = "../../runtime/husky-data-viewer" }
husky-opr = { path = "../../kernel/husky-opr" }
# kernel
husky-val = { path = "../../val/husky-val" }
# fs
husky-vfs = { path = "../../fs/husky-vfs" }

[dev-dependencies]
husky-ast = { path = "../../syntax/husky-ast", features = ["test-utils"] }
