[package]
name = "husky-dev-linkage-table"
version = "0.0.0"
description = "TBD"
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.56"

[dependencies]
smallvec.workspace = true
colored = "2.0.0"
libloading = "0.7.3"
convert_case = "0.6.0"
husky-vm = { path = "../../vm/husky-vm" }
map-collect = { path = "../../abstraction/map-collect" }
husky-ethereal-term = { path = "../../kernel/husky-ethereal-term" }
husky-ethereal-signature = { path = "../../kernel/husky-ethereal-signature" }
husky-entity-syn-tree = { path = "../../syntax/husky-entity-syn-tree" }
sync-utils = { path = "../../utils/husky-sync-utils" }
husky-check-utils = { path = "../../utils/husky-check-utils" }
husky-print-utils = { path = "../../utils/husky-print-utils" }
# kernel
husky-entity-path = { path = "../../kernel/husky-entity-path" }
husky-coword = { path = "../../kernel/husky-coword" }
thin-vec = { path = "../../../forks/thin-vec" }
husky-vm-interface = { path = "../../vm/husky-vm-interface", features = [
    "binding"
] }
