[package]
name = "husky-rust-code-gen"
version = "0.0.0"
description = "TBD"
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.56"

[lib]
doctest = false

[dependencies]
convert_case = "0.6.0"
path-slash = "0.2.1"
# abstractions
salsa = { path = "../../abstractions/salsa" }
vec-like = { path = "../../abstractions/vec-like" }
# lex
husky-token = { path = "../../lex/husky-token" }
# kernel
husky-coword = { path = "../../kernel/husky-coword" }
husky-ethereal-term = { path = "../../kernel/husky-ethereal-term" }
husky-ethereal-signature = { path = "../../kernel/husky-ethereal-signature" }
husky-vfs = { path = "../../fs/husky-vfs" }
# syntax
husky-ast = { path = "../../syntax/husky-ast" }
husky-entity-kind = { path = "../../kernel/husky-entity-kind" }
husky-entity-syn-tree = { path = "../../syntax/husky-entity-syn-tree" }
husky-loop-syntax = { path = "../../syntax/husky-loop-syntax" }
husky-opr = { path = "../../kernel/husky-opr" }
husky-init-syntax = { path = "../../syntax/husky-init-syntax" }
husky-syn-defn = { path = "../../syntax/husky-syn-defn" }
# vm
husky-vm-binding = { path = "../../vm/husky-vm-binding" }
# comptime
husky-rust-code-repr = { path = "../../comptime/husky-rust-code-repr", features = [
    "item_path",
    "registration"
] }
husky-layout = { path = "../../comptime/husky-layout" }
# utils
husky-write-utils = { path = "../../utils/husky-write-utils" }
husky-print-utils = { path = "../../utils/husky-print-utils" }
husky-check-utils = { path = "../../utils/husky-check-utils" }

[dev-dependencies]
husky-ast = { path = "../../syntax/husky-ast", features = ["test-utils"] }
