[package]
name = "ad-hoc-devsoul-dependency"
version.workspace = true
authors = ["my_name"]
edition = "2021"

[dependencies]
# vm
husky-standard-value.workspace = true
# devsoul
husky-devsoul-interface.workspace = true
husky-standard-devsoul-interface.workspace = true
# linket
husky-linket-impl.workspace = true
husky-standard-linket-impl.workspace = true
husky-any-linket-impls.workspace = true
# ki
husky-ki-repr-interface.workspace = true
