[package]
name = "ad-hoc-task-dependency"
version = "0.1.0"
authors = ["my_name"]
edition = "2021"

[dependencies]
# vm
husky-standard-value.workspace = true
# linkage
husky-linkage-impl = { workspace = true, features = ["standard"] }
# tasks
husky-task-interface.workspace = true
husky-ml-task-interface.workspace = true
