[package]
name = "latex-ast-hsy"
version.workspace = true
rust-version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
husky-core.workspace = true
husky-linket-impl.workspace = true
husky-standard-linket-impl.workspace = true
# latex
latex-ast.workspace = true

[lints]
workspace = true
