[package]
name = "latex-ast-hsy"
version.workspace = true
rust-version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
lazy_static.workspace = true
# abstractions
idx-arena.workspace = true
# latex
latex-ast.workspace = true
latex-prelude.workspace = true
latex-vfs.workspace = true
# linket
husky-linket-impl.workspace = true
husky-standard-linket-impl.workspace = true
# utils
husky-path-utils.workspace = true
# library
husky-core.workspace = true

[lints]
workspace = true
