[package]
name = "mnist"
version = "0.1.0"
authors = ["my_name"]
edition = "2021"

[workspace.dependencies]
husky-task-interface = { path = "../../crates/tasks/husky-task-interface" }
husky-ml-task-interface = { path = "../../crates/tasks/husky-ml-task-interface" }
husky-linkage-impl = { path = "../../crates/linkage/husky-linkage-impl", features = [
    "standard"
] }
husky-standard-value = { path = "../../crates/vm/husky-standard-value" }
husky-xrng-utils = { path = "../../crates/utils/husky-rng-utils" }
husky-core = { path = "../../library/core" }
lazy_static = "1.4.0"
serde = "1.0.106"

[dependencies]
husky-core.workspace = true
husky-linkage-impl.workspace = true
husky-ml-task-interface.workspace = true
husky-standard-value.workspace = true
husky-task-interface.workspace = true
husky-xrng-utils.workspace = true
lazy_static.workspace = true
serde.workspace = true
