[package]
name = "mnist"
version.workspace = true
authors = ["my_name"]
edition = "2021"

[dependencies]
shifted-unsigned-int.workspace = true
husky-core.workspace = true
husky-linkage-impl.workspace = true
husky-standard-devsoul-interface.workspace = true
husky-standard-value.workspace = true
husky-devsoul-interface.workspace = true
husky-rng-utils.workspace = true
lazy_static.workspace = true
serde.workspace = true
