[package]
name = "__husky"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
cyclic-slice = { path = "../../abstractions/cyclic-slice" }
wild-utils = { path = "../../utils/husky-wild-utils" }
husky-vm-interface = { path = "../../vm/husky-vm-interface", features = [
    "thin_fp",
    "thick_fp",
    "linkage_macro"
] }
husky-dev-utils = { path = "../../utils/husky-dev-utils" }

[lib]
